<package format="2">
  <name>pose_recorder</name>
  <version>0.1.0</version>
  <description>pose recoder</description>

  <maintainer email="1379591185@qq.com">huarsuma</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <!-- Add any package-specific export tags here -->
  </export>
</package>
